err/dardrive.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/dardrive'...
Compiling './lib/python3.5/site-packages/dardrive/cmdp.py'...
***   File "./lib/python3.5/site-packages/dardrive/cmdp.py", line 80
    except ParserDepError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dardrive/config.py'...
***   File "./lib/python3.5/site-packages/dardrive/config.py", line 107
    except (AssertionError, ValueError), e:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dardrive/dar.py'...
***   File "./lib/python3.5/site-packages/dardrive/dar.py", line 438
    os.makedirs(_dir_name, 0722)
                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/dardrive/db.py'...
***   File "./lib/python3.5/site-packages/dardrive/db.py", line 211
    except ConfigException, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dardrive/shell.py'...
***   File "./lib/python3.5/site-packages/dardrive/shell.py", line 53
    except InitException, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dardrive/tests'...
Compiling './lib/python3.5/site-packages/dardrive/utils.py'...
***   File "./lib/python3.5/site-packages/dardrive/utils.py", line 228
    os.makedirs(ddir, 0700)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/dardrive-0.2.11b13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/xattr'...
Listing './lib/python3.5/site-packages/xattr-0.9.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
